--- a/templates/meal/view.html.twig
+++ b/templates/meal/view.html.twig
@@ -5,16 +5,50 @@
 {% block body %}
 
     <div class="container">
-        <div class="card mt-3">
-            <div class="card-body">
-                <h5 class="card-title">{{ meal.title }}</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Category: {{ meal.category }}</h6>
-                <h6 class="card-subtitle mb-2 text-muted">Tags: {{ meal.showTags }}</h6>
-                <h6 class="card-subtitle mb-2 text-muted">Ingredients: {{ meal.showIngredients }}</h6>
-                <p class="card-text">{{ meal.instructions }}</p>
+        <div class="d-flex flex-column align-items-center">
+            <div class="card mt-3 w-75 d-flex justify-content-center">
+                <div class="card-body d-flex flex-column align-items-center">
+                    <img class="w-25" src="{{ meal.thumbUrl }}" alt="Card image cap">
+                    <div class="mt-3">
+                        <h5 class="card-title">{{ meal.title }}</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Category: {{ meal.category }}</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Tags: {{ meal.showTags }}</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Ingredients: {{ meal.showIngredients }}</h6>
+
+                        <br>
+                        <strong>Instructions:</strong>
+                        <p class="card-text">{{ meal.instructions }}</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="mt-3 w-75">
+                <h2>Comments</h2>
+                {{ form_start(commentForm) }}
+                <div class="form-group w-75">
+                    {{ form_widget(commentForm.content, {attr: {
+                        class: 'form-control'
+                    }}) }}
+                </div>
+                <input type="submit" value="Add comment" class="btn btn-primary mt-3">
+                {{ form_end(commentForm) }}
+
+                <div class="list-group mt-3">
+                    {% for comment in comments %}
+                        <div class="list-group-item list-group-item-action flex-column align-items-start">
+                            <div class="d-flex w-100 justify-content-between">
+                                <h5 class="mb-1">Username</h5>
+                                <small>{{ comment.createdAt | date }}</small>
+                            </div>
+                            <p class="mb-1">{{ comment.content }}</p>
+                        </div>
+                    {% endfor %}
+                </div>
+                <div class="my-3">
+                    {{ knp_pagination_render(comments) }}
+                </div>
             </div>
         </div>
-
     </div>
 
 {% endblock %}
