--- a/templates/meal/view.html.twig
+++ b/templates/meal/view.html.twig
@@ -25,7 +25,14 @@
             <div class="mt-3 w-75">
                 <h2>Comments</h2>
                 {{ form_start(commentForm) }}
-                <div class="form-group w-75">
+                <div class="form-group">
+                    {{ form_label(commentForm.username) }}
+                    {{ form_widget(commentForm.username, {attr: {
+                        class: 'form-control'
+                    }}) }}
+                </div>
+                <div class="form-group">
+                    {{ form_label(commentForm.content) }}
                     {{ form_widget(commentForm.content, {attr: {
                         class: 'form-control'
                     }}) }}
@@ -37,7 +44,7 @@
                     {% for comment in comments %}
                         <div class="list-group-item list-group-item-action flex-column align-items-start">
                             <div class="d-flex w-100 justify-content-between">
-                                <h5 class="mb-1">Username</h5>
+                                <h5 class="mb-1">{{ comment.username }}</h5>
                                 <small>{{ comment.createdAt | date }}</small>
                             </div>
                             <p class="mb-1">{{ comment.content }}</p>
