--- a/templates/meal/index.html.twig
+++ b/templates/meal/index.html.twig
@@ -5,6 +5,17 @@
 {% block body %}
 
     <div class="container">
+        <div class="d-flex mt-3">
+            <a href="{{ path('app_meal') }}" class="btn btn-primary">All</a>
+            <button id="favourite-button"
+                    type="button"
+                    class="btn btn-secondary ms-3"
+                    data-path="{{ path('app_meal') }}"
+            >
+                Favourites
+            </button>
+        </div>
+
         {{ form_start(searchForm) }}
         <div class="row mt-3">
             <div class="d-flex justify-content-start align-items-center">
@@ -19,13 +30,22 @@
         </div>
         {{ form_end(searchForm) }}
 
+
         <ul class="list-group mt-3">
             {% for meal in meals %}
-                <li class="list-group-item d-flex align-items-center justify-content-start">
-                    <img src="{{ meal.thumbUrl }}" style="width: 5%;" alt="">
-                    <a href="{{ path('app_meal_view', {
-                        id: meal.id
-                    }) }}" class="ms-2">{{ meal.title }}</a>
+                <li class="list-group-item d-flex align-items-center justify-content-between">
+                    <div class="d-flex">
+                        <img src="{{ meal.thumbUrl }}" style="width: 5%;" alt="">
+                        <a href="{{ path('app_meal_view', {
+                            id: meal.id
+                        }) }}" class="ms-2">{{ meal.title }}</a>
+                    </div>
+                    <button type="button"
+                            class="btn btn-outline-primary favourite"
+                            data-meal-id="{{ meal.id }}"
+                    >
+                        &heartsuit;
+                    </button>
                 </li>
             {% endfor %}
         </ul>
@@ -35,4 +55,15 @@
         </div>
     </div>
 
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script type="module">
+        import {Favourites} from "{{ asset('js/meal/Favourites.js') }}";
+
+        const favourites = new Favourites;
+
+        favourites.handlePageLoad();
+    </script>
 {% endblock %}
